--- a/GettingToKnowTheData.ipynb
+++ b/GettingToKnowTheData.ipynb
@@ -1624,14 +1624,14 @@
    "source": [
     "\n",
     "\n",
-    "#1 Never attended school or only kindergarten  \n",
-    "#2 Grades 1 through 8 (Elementary)   \n",
-    "#3 Grades 9 through 11 (Some high school)   \n",
-    "#4 Grade 12 or GED (High school graduate)   \n",
-    "#5 College 1 year to 3 years (Some college or technical school)   \n",
-    "#6 College 4 years or more (College graduate)   \n",
-    "#9 Refused   \n",
-    "#BLANK Not asked or Missing 1,770"
+    "1 Never attended school or only kindergarten  \n",
+    "2 Grades 1 through 8 (Elementary)   \n",
+    "3 Grades 9 through 11 (Some high school)   \n",
+    "4 Grade 12 or GED (High school graduate)   \n",
+    "5 College 1 year to 3 years (Some college or technical school)   \n",
+    "6 College 4 years or more (College graduate)   \n",
+    "9 Refused   \n",
+    "BLANK Not asked or Missing 1,770"
    ]
   },
   {
