--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "e48e563f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "99f35e13",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5051fec1",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "0668ea14",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "478b774c",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6064d978",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "2d9d85f7",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "dbc140d1",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "a07f4c71",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "03fa9a17",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "b30f510f",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "84a3d827",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "80662906",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "56c5d142",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "f6cf0b36",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "eeee3a44",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "2       8        5        30        30         1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "dc0b0483",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "(253680, 5)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "3d3a01a9",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "689fe66d",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "       [-2.44013754,  0.45729435, -0.42962961, -0.48659241, -0.44971813]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "9844e1f2",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "3352ae25",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "7cf92efa",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "2fc449ef",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "14341437",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "85cfb593",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "53c31f8b",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "4a4e3c02",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
        "{0: 'none', 1: 'Diabetes'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "8356e441",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "45b01bf9",
    "metadata": {
     "scrolled": true
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "2a84b68f",
    "metadata": {},
    "outputs": [
@@ -870,19 +870,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "64c960cb",
+   "execution_count": 42,
+   "id": "05fdd66f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e24f154d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to save the model\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "64c960cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:443: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Try joblib, which is more efficient at handling large numpy arrays of data.\n",
     "from joblib import dump, load\n",
     "\n",
     "# Save the model as a pickle file\n",
-    "dump(logreg, 'test_mfrancis870.pkl')\n",
+    "dump(logreg, 'data/prepared/logreg_mfrancis870.pkl')\n",
     "\n",
     "# Load fthe model from the file\n",
-    "logreg_from_joblib = load('test_mfrancis870.pkl')\n",
+    "logreg_from_joblib = load('data/prepared/logreg_mfrancis870.pkl')\n",
     "\n",
     "# Use the model to make predictions\n",
     "y_pred_from_joblib = logreg_from_joblib.predict(X_test)\n",
@@ -892,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "id": "d691789d",
    "metadata": {},
    "outputs": [
@@ -900,7 +930,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR Pickle RMSE: 0.37775582575456973\n"
+      "LR Pickle RMSE: 0.39467841357478756\n"
      ]
     }
    ],
@@ -911,7 +941,7 @@
     "rmse_logreg_joblib = np.sqrt(mean_squared_error(y_test, y_pred_from_joblib))\n",
     "\n",
     "#print(f'LR RMSE: {rmse_lr}')\n",
-    "print(f'LR Pickle RMSE: {rmse_lr_joblib}')"
+    "print(f'LR Pickle RMSE: {rmse_logreg_joblib}')"
    ]
   },
   {
@@ -924,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "id": "1d03a2c3",
    "metadata": {},
    "outputs": [],
@@ -938,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "84e58e9e",
    "metadata": {},
    "outputs": [],
@@ -959,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "id": "3c770f21",
    "metadata": {},
    "outputs": [
@@ -969,7 +999,7 @@
        "0.854399243140965"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 49,
    "id": "bc0952e1",
    "metadata": {},
    "outputs": [
@@ -992,7 +1022,7 @@
        "0.8702354672553348"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "id": "1e4ffe23",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "fc7633c0",
    "metadata": {},
    "outputs": [],
@@ -1053,28 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "05fdd66f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "e24f154d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# to save the model\n",
-    "import joblib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 52,
    "id": "ad35f277",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 61,
    "id": "e3dd5358",
    "metadata": {},
    "outputs": [
@@ -1132,10 +1141,10 @@
     "# Using pickle\n",
     "\n",
     "# Save the model\n",
-    "pickle.dump(rfc, open(\"rfc_mfrancis870.pkl\", 'wb'))\n",
+    "pickle.dump(rfc, open(\"data/prepared/rfc_mfrancis870.pkl\", 'wb'))\n",
     "\n",
     "# Restore the model\n",
-    "rfc_from_pickle = pickle.load(open('rfc_mfrancis870.pkl', 'rb'))\n",
+    "rfc_from_pickle = pickle.load(open('data/prepared/rfc_mfrancis870.pkl', 'rb'))\n",
     "\n",
     "# Use the loaded model to make predictions\n",
     "y_pred_from_pickle = rfc_from_pickle.predict(X_test)\n",
@@ -1150,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 62,
    "id": "49112903",
    "metadata": {},
    "outputs": [
@@ -1160,7 +1169,7 @@
        "array([0, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 63,
    "id": "ccdf8235",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1257,7 @@
        "179386       7        3        10         5         1"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,24 +1268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 64,
    "id": "ab3d449c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR RMSE: 0.37775582575456973\n",
-      "LR Pickle RMSE: 0.37687824590428104\n"
+      "LR RMSE: 0.38157667232030185\n",
+      "LR Pickle RMSE: 0.38157667232030185\n"
      ]
     }
    ],
@@ -1285,10 +1286,10 @@
     "from joblib import dump, load\n",
     "\n",
     "# Save the model as a pickle file\n",
-    "dump(rfc, 'rfc_mfrancis870.pkl')\n",
+    "dump(rfc, 'data/prepared/rfc_mfrancis870.pkl')\n",
     "\n",
     "# Load fthe model from the file\n",
-    "rfc_from_joblib = load('rfc_mfrancis870.pkl')\n",
+    "rfc_from_joblib = load('data/prepared/rfc_mfrancis870.pkl')\n",
     "\n",
     "# Use the model to make predictions\n",
     "y_pred_from_joblib = rfc_from_joblib.predict(X_test)\n",
@@ -1304,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 65,
    "id": "965e6953",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1315,7 @@
        "['RandomForestClassifier.joblib']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "id": "72d5b4df",
    "metadata": {},
    "outputs": [
@@ -1338,7 +1339,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "id": "169d0416",
    "metadata": {
     "scrolled": true
@@ -1361,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "id": "a26c6567",
    "metadata": {},
    "outputs": [],
