--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "id": "e48e563f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "id": "99f35e13",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "id": "5051fec1",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "id": "0668ea14",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "id": "478b774c",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "id": "6064d978",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "id": "2d9d85f7",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "id": "dbc140d1",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "id": "a07f4c71",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "id": "03fa9a17",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "id": "b30f510f",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "84a3d827",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "id": "80662906",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "id": "56c5d142",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "id": "f6cf0b36",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "id": "eeee3a44",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "2       8        5        30        30         1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "id": "dc0b0483",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "(253680, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 101,
    "id": "3d3a01a9",
    "metadata": {},
    "outputs": [],
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 102,
    "id": "689fe66d",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "       [-2.44013754,  0.45729435, -0.42962961, -0.48659241, -0.44971813]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 103,
    "id": "9844e1f2",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "id": "3352ae25",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "id": "7cf92efa",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "id": "2fc449ef",
    "metadata": {},
    "outputs": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "id": "14341437",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
    "id": "85cfb593",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
        "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 109,
    "id": "53c31f8b",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "id": "4a4e3c02",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
        "{0: 'none', 1: 'Diabetes'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 111,
    "id": "8356e441",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 112,
    "id": "45b01bf9",
    "metadata": {
     "scrolled": true
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "id": "2a84b68f",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 114,
    "id": "05fdd66f",
    "metadata": {},
    "outputs": [],
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 115,
    "id": "e24f154d",
    "metadata": {},
    "outputs": [],
@@ -891,19 +891,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 116,
    "id": "64c960cb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:443: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try joblib, which is more efficient at handling large numpy arrays of data.\n",
     "from joblib import dump, load\n",
@@ -922,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 117,
    "id": "d691789d",
    "metadata": {},
    "outputs": [
@@ -930,17 +921,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR Pickle RMSE: 0.39467841357478756\n"
+      "LR RMSE: 0.37775582575456973\n",
+      "LR Pickle RMSE: 0.37775582575456973\n"
      ]
     }
    ],
    "source": [
     "# Testing RMSE\n",
     "# Compute Test RMSE for both models\n",
-    "#rmse_lr = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "rmse_lr = np.sqrt(mean_squared_error(y_test, y_pred))\n",
     "rmse_logreg_joblib = np.sqrt(mean_squared_error(y_test, y_pred_from_joblib))\n",
     "\n",
-    "#print(f'LR RMSE: {rmse_lr}')\n",
+    "print(f'LR RMSE: {rmse_lr}')\n",
     "print(f'LR Pickle RMSE: {rmse_logreg_joblib}')"
    ]
   },
@@ -954,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 118,
    "id": "1d03a2c3",
    "metadata": {},
    "outputs": [],
@@ -968,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 119,
    "id": "84e58e9e",
    "metadata": {},
    "outputs": [],
@@ -989,21 +981,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "3c770f21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.854399243140965"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# evaluate model using the .score method\n",
     "acc_rfc_test = rfc.score(X_test, y_test)\n",
@@ -1012,21 +993,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "bc0952e1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8702354672553348"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# evaluate model using the .score method\n",
     "acc_rfc_train = rfc.score(X_train, y_train)\n",
@@ -1035,18 +1005,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "1e4ffe23",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy is better using the Random Forest Model by 0.011978345422054115 percent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Accuracy is better using the Random Forest Model by {acc_rfc_train - acc_train  } percent')"
    ]
@@ -1061,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "fc7633c0",
    "metadata": {},
    "outputs": [],
@@ -1083,22 +1045,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "ad35f277",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Training MSE: 0.1297645327446652\n",
-      " Testing MSE:  0.145600756859035\n",
-      "\n",
-      " Training RMSE: 0.36022844521867675\n",
-      " Testing RMSE:  0.38157667232030185\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "y_pred = rfc.predict(X_test)\n",
@@ -1122,19 +1072,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "e3dd5358",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RFC RMSE: 0.38157667232030185\n",
-      "RFC Pickle RMSE: 0.38157667232030185\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -1159,128 +1100,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "49112903",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0], dtype=int64)"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     " y_pred[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "ccdf8235",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Income</th>\n",
-       "      <th>GenHlth</th>\n",
-       "      <th>MentHlth</th>\n",
-       "      <th>PhysHlth</th>\n",
-       "      <th>DiffWalk</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>92783</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19519</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239829</th>\n",
-       "      <td>8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179386</th>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Income  GenHlth  MentHlth  PhysHlth  DiffWalk\n",
-       "92783        8        1         0         0         0\n",
-       "19519        5        3         0         0         0\n",
-       "239829       8        3         5         0         0\n",
-       "179386       7        3        10         5         1"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_test[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "ab3d449c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR RMSE: 0.38157667232030185\n",
-      "LR Pickle RMSE: 0.38157667232030185\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try joblib, which is more efficient at handling large numpy arrays of data.\n",
     "from joblib import dump, load\n",
@@ -1296,30 +1139,19 @@
     "\n",
     "# Testing RMSE\n",
     "# Compute Test RMSE for both models\n",
-    "rmse_lr = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "rmse_lr_joblib = np.sqrt(mean_squared_error(y_test, y_pred_from_joblib))\n",
+    "rmse_rfc = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+    "rmse_rfc_joblib = np.sqrt(mean_squared_error(y_test, y_pred_from_joblib))\n",
     "\n",
-    "print(f'LR RMSE: {rmse_lr}')\n",
-    "print(f'LR Pickle RMSE: {rmse_lr_joblib}')"
+    "print(f'RFC RMSE: {rmse_rfc}')\n",
+    "print(f'RFC Pickle RMSE: {rmse_rfc_joblib}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "965e6953",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['RandomForestClassifier.joblib']"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we are happy to our model, so we save it to be able\n",
     "# to score new data\n",
@@ -1329,28 +1161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "72d5b4df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "169d0416",
    "metadata": {
     "scrolled": true
@@ -1362,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "a26c6567",
    "metadata": {},
    "outputs": [],
@@ -1381,7 +1202,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b92cbacf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(rmse_logreg_joblib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d31f67",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "print(rmse_rfc_joblib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3833085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmse_logreg_joblib - rmse_rfc_joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f50bba5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2db98ea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'The Logistic model outperformed the RandomForest model by { rmse_logreg_joblib - rmse_rfc_joblib}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc864e50",
    "metadata": {},
    "outputs": [],
    "source": []
