--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -981,10 +981,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "3c770f21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.854399243140965"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# evaluate model using the .score method\n",
     "acc_rfc_test = rfc.score(X_test, y_test)\n",
@@ -993,10 +1004,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "bc0952e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8702354672553348"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# evaluate model using the .score method\n",
     "acc_rfc_train = rfc.score(X_train, y_train)\n",
@@ -1005,10 +1027,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "1e4ffe23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is better using the Random Forest Model by 0.011978345422054115 percent\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Accuracy is better using the Random Forest Model by {acc_rfc_train - acc_train  } percent')"
    ]
@@ -1023,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "fc7633c0",
    "metadata": {},
    "outputs": [],
@@ -1045,10 +1075,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "ad35f277",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Training MSE: 0.1297645327446652\n",
+      " Testing MSE:  0.145600756859035\n",
+      "\n",
+      " Training RMSE: 0.36022844521867675\n",
+      " Testing RMSE:  0.38157667232030185\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "y_pred = rfc.predict(X_test)\n",
@@ -1072,10 +1114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "e3dd5358",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RFC RMSE: 0.38157667232030185\n",
+      "RFC Pickle RMSE: 0.38157667232030185\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -1100,30 +1151,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "49112903",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     " y_pred[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "ccdf8235",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Income</th>\n",
+       "      <th>GenHlth</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>PhysHlth</th>\n",
+       "      <th>DiffWalk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92783</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19519</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239829</th>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179386</th>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Income  GenHlth  MentHlth  PhysHlth  DiffWalk\n",
+       "92783        8        1         0         0         0\n",
+       "19519        5        3         0         0         0\n",
+       "239829       8        3         5         0         0\n",
+       "179386       7        3        10         5         1"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_test[:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "ab3d449c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RFC RMSE: 0.38157667232030185\n",
+      "RFC Pickle RMSE: 0.38157667232030185\n"
+     ]
+    }
+   ],
    "source": [
     "# Try joblib, which is more efficient at handling large numpy arrays of data.\n",
     "from joblib import dump, load\n",
@@ -1148,30 +1297,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "965e6953",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['data/prepared/RandomForestClassifier.joblib']"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# we are happy to our model, so we save it to be able\n",
+    "# save my model to score new data\n",
     "# to score new data\n",
     "\n",
-    "joblib.dump(rfc, 'RandomForestClassifier.joblib') "
+    "joblib.dump(rfc, 'data/prepared/RandomForestClassifier.joblib') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "72d5b4df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "169d0416",
    "metadata": {
     "scrolled": true
@@ -1183,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "a26c6567",
    "metadata": {},
    "outputs": [],
@@ -1201,32 +1372,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b92cbacf",
+   "execution_count": 133,
+   "id": "8ad0653a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37775582575456973\n"
+     ]
+    }
+   ],
    "source": [
     "print(rmse_logreg_joblib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61d31f67",
+   "execution_count": 134,
+   "id": "675d34f9",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.38157667232030185\n"
+     ]
+    }
+   ],
    "source": [
     "print(rmse_rfc_joblib)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d3833085",
+   "execution_count": 135,
+   "id": "c3557674",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0038208465657321167"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rmse_logreg_joblib - rmse_rfc_joblib"
    ]
@@ -1234,17 +1432,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f50bba5",
+   "id": "944a12e0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "2db98ea7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Logistic model outperformed the RandomForest model by -0.0038208465657321167\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'The Logistic model outperformed the RandomForest model by { rmse_logreg_joblib - rmse_rfc_joblib}')"
    ]
@@ -1252,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc864e50",
+   "id": "77cce497",
    "metadata": {},
    "outputs": [],
    "source": []
