--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "8ad0653a",
+   "id": "fd133166",
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "675d34f9",
+   "id": "3678b45d",
    "metadata": {
     "scrolled": false
    },
@@ -1411,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "c3557674",
+   "id": "7dbb50fe",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "944a12e0",
+   "id": "a83432b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1452,13 +1452,13 @@
     }
    ],
    "source": [
-    "print(f'The Logistic model outperformed the RandomForest model by { rmse_logreg_joblib - rmse_rfc_joblib}')"
+    "print(f'The RandomForest model outperformed the Logistic  model by { rmse_logreg_joblib - }')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77cce497",
+   "id": "dbb3b9de",
    "metadata": {},
    "outputs": [],
    "source": []
