--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -1373,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "fd133166",
+   "id": "914f72b4",
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "3678b45d",
+   "id": "ab65a0b1",
    "metadata": {
     "scrolled": false
    },
@@ -1411,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "7dbb50fe",
+   "id": "cf037a7f",
    "metadata": {},
    "outputs": [
     {
@@ -1432,14 +1432,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83432b0",
+   "id": "1e8f4d17",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 138,
    "id": "2db98ea7",
    "metadata": {},
    "outputs": [
@@ -1447,18 +1447,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Logistic model outperformed the RandomForest model by -0.0038208465657321167\n"
+      "The RandomForest model outperformed the Logistic  model by 0.0038208465657321167\n"
      ]
     }
    ],
    "source": [
-    "print(f'The RandomForest model outperformed the Logistic  model by { rmse_logreg_joblib - }')"
+    "print(f'The RandomForest model outperformed the Logistic  model by { rmse_rfc_joblib - rmse_logreg_joblib  }')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbb3b9de",
+   "id": "962552ef",
    "metadata": {},
    "outputs": [],
    "source": []
