--- a/Score_New_Data.ipynb
+++ b/Score_New_Data.ipynb
@@ -2,18 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "1b67ff51",
+   "execution_count": 64,
+   "id": "1fed344b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import scipy.stats as stats\n",
-    "\n",
     "import joblib\n",
     "import pickle\n",
     "\n",
@@ -22,14 +19,16 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import train_test_split, KFold, cross_val_score\n"
+    "from sklearn.model_selection import train_test_split, KFold, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "7e04eff2",
-   "metadata": {},
+   "execution_count": 65,
+   "id": "3f2b3a78",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "X_test = pd.read_csv(\"data/prepared/X_test_ScoreNewData.csv\")"
@@ -37,26 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3f2b3a78",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Income  GenHlth  MentHlth  PhysHlth  DiffWalk\n",
-      "0       8        1         0         0         0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "id": "bea073db",
    "metadata": {},
    "outputs": [],
@@ -65,436 +45,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 171,
-   "id": "1840030c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Opening saved model\n",
-    "with open(\"logreg_mfrancis870.pkl\", \"rb\") as file:\n",
-    "    logreg_model = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "id": "7f328dba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Income  GenHlth  MentHlth  PhysHlth  DiffWalk\n",
-      "0       8        1         0         0         0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(X_test[:1] )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "id": "f3dae1b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['logreg_mfrancis870.pkl']"
-      ]
-     },
-     "execution_count": 173,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#logreg\n",
-    "from joblib import dump, load\n",
-    "\n",
-    "# Save the model as a pickle file\n",
-    "dump(logreg_model, 'logreg_mfrancis870.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "id": "ff4e004f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'logreg2_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [209]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m joblib\u001b[38;5;241m.\u001b[39mdump(\u001b[43mlogreg2_model\u001b[49m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlogreg_mfrancis870.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'logreg2_model' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "joblib.dump(logreg_model, \"logreg_mfrancis870.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "id": "4c640bf5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load fthe model from the file\n",
-    "logreg_from_joblib = load('logreg_mfrancis870.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "id": "74012bb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load fthe model from the file\n",
-    "logreg_from_joblib = load('logreg_mfrancis870.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "id": "58f1f72a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'fit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [204]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#A column-vector y was passed when a 1d array was\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mlogreg_from_joblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m([[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]], [\u001b[38;5;241m1\u001b[39m])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'fit'"
-     ]
-    }
-   ],
-   "source": [
-    "#A column-vector y was passed when a 1d array was\n",
-    "logreg_from_joblib.fit([[2,3,1,0,0,0]], [1])"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "5c9d3dcd",
+   "id": "3795eb08",
    "metadata": {},
    "source": [
-    "===================================================================="
+    "# Load Random Forest Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "c4b95c6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Opening saved model\n",
-    "with open(\"rfc_mfrancis870.pkl\", \"rb\") as file:\n",
-    "    rf_model1 = pickle.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "95e4d9a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['logreg_mfrancis870.pkl']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "joblib.dump(rf_model, \"logreg_mfrancis870.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "07831f32",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['rfc_mfrancis870.pkl']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#from joblib import dump, load#\n",
-    "\n",
-    "# Save the model as a pickle file\n",
-    "#dump(rf_model, 'rfc_mfrancis870.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "34499040",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "from joblib import dump, load#\n",
     "\n",
     "# Load fthe model from the file\n",
-    "#rfc_from_joblib = load('rfc_mfrancis870.pkl')"
+    "rfc_from_joblib = load('data/prepared/rfc_mfrancis870.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "f78a6e1a",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'score'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mrf_model1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscore\u001b[49m(X_test, y_test)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'score'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.854399243140965\n"
      ]
     }
    ],
    "source": [
-    "result = rf_model1.score(X_test, y_test)\n",
+    "result = rfc_from_joblib.score(X_test, y_test)\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fce09f22",
+   "execution_count": 17,
+   "id": "51a6380b",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'fit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#A column-vector y was passed when a 1d array was\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mrfc_from_joblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m([[\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]], [\u001b[38;5;241m1\u001b[39m])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'fit'"
-     ]
-    }
-   ],
-   "source": [
-    "#A column-vector y was passed when a 1d array was\n",
-    "rfc_from_joblib.fit([[2,3,1,0,0,0]], [1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "id": "8aeecca9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(rfc_from_joblib))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "id": "836df44d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'fit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [182]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#A column-vector y was passed when a 1d array was\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mrfc_from_joblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m(X_test, [\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'fit'"
-     ]
-    }
-   ],
-   "source": [
-    "#A column-vector y was passed when a 1d array was\n",
-    "rfc_from_joblib.fit(X_test, [0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "id": "6dd490e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test = [0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "id": "b38c4280",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'predict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [185]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Use the model to make predictions\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m y_pred_from_joblib \u001b[38;5;241m=\u001b[39m \u001b[43mrfc_from_joblib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m(X_test)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'predict'"
-     ]
-    }
-   ],
-   "source": [
-    "# Use the model to make predictions\n",
-    "y_pred_from_joblib = rfc_from_joblib.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 186,
-   "id": "33bb2d7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RFC Pickle RMSE: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-    "\n",
-    "rmse_rfc_joblib = np.sqrt(mean_squared_error(y_test, y_pred_from_joblib))\n",
-    "\n",
-    "\n",
-    "print(f'RFC Pickle RMSE: {rmse_rfc_joblib}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8162d508",
-   "metadata": {},
-   "source": [
-    "============================="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "7bb7b7e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LogisticRegression()"
+       "Index(['Income', 'GenHlth', 'MentHlth', 'PhysHlth', 'DiffWalk'], dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " \n",
-    "# Instantiate the model.\n",
-    "lr = LogisticRegression()\n",
-    "\n",
-    "# Train the model on the entire data set.\n",
-    "lr.fit(X_test, y_test)"
+    "#data format \n",
+    "X_test.columns   # input Data format for x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "749812db",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR Pickle RMSE: 0.37654339177694535\n"
-     ]
-    }
-   ],
+   "execution_count": 52,
+   "id": "4b1203ff",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# Save the model as a pickle file\n",
-    "dump(lr, 'test_mfrancis870.pkl')\n",
-    "\n",
-    "# Load fthe model from the file\n",
-    "lr_from_joblib = load('test_mfrancis870.pkl')\n",
-    "\n",
-    "# Use the model to make predictions\n",
-    "y_pred_from_joblib = lr_from_joblib.predict(X_test)\n",
-    "\n",
-    "# Testing RMSE\n",
-    "# Compute Test RMSE for both models\n",
-    " \n",
-    "rmse_lr_joblib = np.sqrt(mean_squared_error(y_test, y_pred_from_joblib))\n",
-    "\n",
-    " \n",
-    "print(f'LR Pickle RMSE: {rmse_lr_joblib}')"
+    "#creat new dataframe for new data\n",
+    "new_data_df = pd.DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "bf1f258e",
+   "execution_count": 53,
+   "id": "ca79c681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add columns to new dataframe\n",
+    "new_data_X = pd.DataFrame(new_data_df, columns=['Income', 'GenHlth', 'MentHlth', 'PhysHlth', 'DiffWalk'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1ce8113f",
    "metadata": {},
    "outputs": [
     {
@@ -528,17 +169,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -548,67 +181,49 @@
       ],
       "text/plain": [
        "   Income  GenHlth  MentHlth  PhysHlth  DiffWalk\n",
-       "0       8        1         0         0         0\n",
-       "1       5        3         0         0         0"
+       "0       2        3         1         0         0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test[:2]"
+    "new_data_X.loc[0] = [2,3,1,0,0] \n",
+    "new_data_X "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "9cd6bf9a",
+   "execution_count": 63,
+   "id": "7e978bea",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "#prediction\n",
-    "y_pred = lr.predict([[8,1,0,0,0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "2177f58d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred=['True' if x==1 else 'False' for x in y_pred] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "ad5abbb3",
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your predicted diabetes diagnosis is ['False']\n"
+      "[0]\n"
      ]
     }
    ],
    "source": [
-    "print(f'Your predicted diabetes diagnosis is {y_pred}')"
+    "y_pred = rfc_from_joblib.predict(new_data_X ) \n",
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "604171f7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "Given income Less than $15,000, good general health, no days where health was not good, and no diffi walking , you have a 85% proababliy you will not be diagnosed with   diabetes"
    ]
   },
   {
