lots of changes'

--- a/my_functions.ipynb
+++ b/my_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "61ea07ce-7b69-42e6-821e-1ebbaa43e193",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "b5966b8a-2168-4047-a26a-be001c776fe5",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "6bc37957-4ca7-48fb-8d3f-6011f57f1454",
    "metadata": {},
    "outputs": [],
@@ -63,24 +63,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "051c1eb9-edbe-4ed1-b44a-f888cf6a5b61",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_local_data(name, directory):\n",
+    "    \"\"\"\n",
+    "    Read in one CSV as a DataFrame from the given directory\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    name : menhealth or menhealth or physical or dietary,heart,sex,edu,al   \n",
+    "\n",
+    "    directory : string name of directory to save files i.e. \"data/raw\"\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    DataFrame\n",
+    "    \"\"\"\n",
+    "    return pd.read_csv(f\"{directory}/{name}_data.csv\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8e3b34c9-f08d-4eae-87d4-56204149fd0f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def run():\n",
+    "    \"\"\"\n",
+    "    Run all cleaning and transformation steps\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Dictionary of DataFrames\n",
+    "    \"\"\"\n",
+    "    names = ['menhealth','menhealth','physical','dietary','heart','sex','edu','all']\n",
+    "    data = {}\n",
+    "    for i in names:\n",
+    "      data[f\"{i}\"] = read_local_data(i,'data/raw')\n",
+    "    return data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a569a221-a7f2-4e2a-a4cc-b7f41fe0ead7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b23bee-f9dc-411c-bdd9-4edbb1c04e39",
    "metadata": {},
    "outputs": [],
    "source": []
